# course-ml-streamlit-app

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
serialized/: columns_export.json  dt_classifier.save  robust_sc.save  test_sample.csv  test_sample_pre.csv
src/course_ml_streamlit/: _data.py  main.py  model.py  preprocessing.py  temp.py
src/course_ml_streamlit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_main.py  test_model.py  test_preprocessing.py
