[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
addopts = "--cov=course_ml_streamlit"
testpaths = [
    "tests",
]
# These warnings are caused by streamlit using outdated dependencies
filterwarnings = [
    "ignore::DeprecationWarning:dateutil.*:",
    "ignore::DeprecationWarning:importlib.*:",
]
