[metadata]
name = course_ml_streamlit

[options]
packages = 
    course_ml_streamlit
install_requires = 
    streamlit>=1.29
    pandas>=2.1
    numpy>=1.23
    scikit-learn>=1.3
    joblib>=1.3
    lightgbm>=4.1
python_requires = >=3.12
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing = 
    ruff>=0.1
    pytest>=7.4
    pytest-cov>=4.1

[options.package_data]
spark_lab = py.typed
